2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (linux_find_partition): Don't abort
	on first non-existant partition.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (open_device): Set data->fd to -1 if
	openning fails.
	Reported by: Mark Korenberg.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (linux_find_partition): Prevent possible
	overflow.

2011-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (main): Explicitely flush and sync the output
	before closing to ensure that it will be readable by grub-setup.

2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/efi/appleloader.c (MAKE_PIWG_PATH): New macro.
	(devpath_1): Use MAKE_PIWG_PATH.
	(devpath_2): Likewise.
	(devpath_3): Likewise.
	(devpath_4): Likewise.
	(devpath_5): Likewise.
	(devpath_6): Likewise.

	The appleldr.mod was checked that to be binary identical to previous
	version.

2011-05-05  Zach <mikezackles>

	Support 2010 Macbooks.

	* grub-core/loader/efi/appleloader.c (devpath_6): New variable.
	(devs): Add devpath_6.

2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkpasswd-pbkdf2.c (main): Use /dev/urandom and not
	/dev/random. /dev/urandom is good enough for our purposes (salting).

2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in (process_input_dir): Include efiemu??.o.

2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/legacy_parse.c (grub_legacy_parse): Correctly handle
	hexadecimal.

2011-05-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/efiemu/main.c (grub_efiemu_load_file): Return grub_errno
	and not 0 on failure.

2011-05-03  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/fs/i386/pc/pxe.c (grub_pxefs_dir): Return
	GRUB_ERR_BAD_FS rather than GRUB_ERR_IO if the disk is not a pxe
	disk; otherwise grub_fs_probe will not fall back to the next